derive/tests/snapshots/update_hook_with_set_on_update/AuditedEntry/create_audited_entry.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `audited_entry` table.
    pub fn create_audited_entry<'a>(
        &'a self,
        audited_entry: CreateAuditedEntry,
    ) -> Result<AuditedEntry, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let label = audited_entry.label;
        let modified_at = None;
        let audited_entry = AuditedEntry {
            id,
            label,
            modified_at,
        };
        match self.db().audited_entry().try_insert(audited_entry.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "audited_entry".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ audited_entry : {:?} }}", audited_entry
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "audited_entry".into(),
                        })
                    }
                }
            }
        }
    }
}
