derive/tests/snapshots/update_hook_with_set_on_update/AuditedEntry/get_all_audited_entries.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `audited_entry` table.
    pub fn get_all_audited_entries<'a>(&'a self) -> impl Iterator<Item = AuditedEntry> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().audited_entry().iter()
    }
}
